Searchbar: better position when there is a research + fixed on scroll + scrollbar hidden

--- a/front/src/components/SearchBar/searchbar.scss
+++ b/front/src/components/SearchBar/searchbar.scss
@@ -69,7 +69,7 @@ input[type="text"]
 
 input[type="text"]::placeholder
 {
-    color: #923340;
+    color: #923340a9;
 }
 
 #s-cover
