--- a/front/src/styles/index.scss
+++ b/front/src/styles/index.scss
@@ -7,6 +7,10 @@ body {
   //background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 /* 
   // or you can import your own font
   @font-face {
